# kap

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
argocd/: configmap.yml  create_token.sh  deployment.yml  ingress.yml  install.yaml  install_application.sh  kustomization.yml  networkpolicy.yml  tls-certs-cm.yml
cert-manager/: cert-manager.yml  clusterissuer.yml  configmap.yml  deployment.yml  kustomization.yml  service.yml  webhook.yml
cli/: LICENSE  Makefile  argocd-tls-certs-cm.template.yml  go.mod  go.sum  install_application.sh  main.go  tls-certs-cm.json
cluster/: add_dns_records.sh  create_cluster.sh  kind-config.yml  local_dns_records.sh
dashboard/: get_dashboard_token.sh  recommended.yaml
external-dns/: coredns.yml  etcd.yml  external-dns.yml  install.sh  install_coredns.sh  kustomization.yml  remove.sh  sample.yml
gitlab/: create_project.sh  create_registry_secret.yml  ingressclass.yml  install.sh  kustomization.yml  values.yml
ingress-nginx/: deploy.yaml  deployment.yml  kustomization.yaml  service.yml  servicemonitor.yml
istio/: configmap.yml  dashboard.yml  deployment.yml  envoyfilter.yml  horizontalpodautoscaler.yml  ingress.yml  kustomization.yml  poddisruptionbudget.yml  service.yml  webhook.yml
jaeger/: namespace.yml  (+1 more)
scripts/templates/projects/python/: .flake8  .gitlab-ci.yml  Dockerfile  noxfile.py  pyproject.toml
scripts/templates/projects/python/src/: main.py
scripts/templates/projects/python/src/internal/: telemetry.py
scripts/templates/projects/python/src/routers/: items.py  users.py
scripts/templates/projects/python/tests/routers/: test_items.py  test_users.py
(+537 files in other folders)
